@@ -174,7 +174,9 @@ void set_catalogues_and_refresh (xexp *catalogues,
 				 void (*cont) (bool keep_going, void *data),
 				 void *data);
 
-void install_from_file_flow (const char *filename);
+void install_from_file_flow (const char *filename,
+			     bool        trusted);
+
 void restore_packages_flow ();
 void update_all_packages_flow ();
 
